# wikidata-parsing

./: .gitignore  Cargo.toml  README.md  compress_wikidata_msgpack.py  dmb_generation.py  example_data.jsonl  fast.py  full_similarity.py  hashing_similarity.py  loading.py  noun.py  pyproject.toml  research.md  similarity.py  utils.py  wikidata-row.example.json  wikidata.capnp
python-shard-reader/: README.md  constants.py  pyproject.toml  shard_reader.py  utils.py
schema-discovery/: discover.py  schema-check.py
src/: constants.rs  main.rs  mp.rs  mp_read.rs  sharded.rs  wd.rs  wd_read.rs
wikidata_linker_utils/: wikidata_iterator.py
